--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERA</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
     <header class="app-bar">
@@ -36,6 +36,6 @@
             </a>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="products.js"></script>
 </body>
 </html>
