--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
                     <p class="subtitle">Subtitle 2</p>
                 </div>
             </a>
-            <a href="https://example.com/3" class="list-item gradient-item gradient-blue-green">
+            <a href="mira.html" class="list-item gradient-item gradient-blue-green">
                 <img src="https://via.placeholder.com/100" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Title 3</h2>
