--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
                     <p class="subtitle">Subtitle 1</p>
                 </div>
             </a>
-            <a href="https://example.com/2" class="list-item gradient-item gradient-black-orange">
+            <a href="pdfm.html" class="list-item gradient-item gradient-black-orange">
                 <img src="https://via.placeholder.com/100" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Title 2</h2>
