--- a/products.html
+++ b/products.html
@@ -13,25 +13,25 @@
     </header>
     <main>
         <div class="list-view">
-            <a href="https://example.com/1" class="list-item gradient-item gradient-black-pink">
+            <a href="chat.html" class="list-item gradient-item gradient-black-pink">
                 <img src="https://via.placeholder.com/100" alt="Item Image">
                 <div class="text-container">
-                    <h2 class="title">Title 1</h2>
-                    <p class="subtitle">Subtitle 1</p>
+                    <h2 class="title">Nova AI</h2>
+                    <p class="subtitle">Intelligent AI Chatbot | Powered by Google AI Model</p>
                 </div>
             </a>
             <a href="pdfm.html" class="list-item gradient-item gradient-black-orange">
                 <img src="https://via.placeholder.com/100" alt="Item Image">
                 <div class="text-container">
-                    <h2 class="title">Title 2</h2>
-                    <p class="subtitle">Subtitle 2</p>
+                    <h2 class="title">PDF MERGER</h2>
+                    <p class="subtitle">A advanced pdf merger app that merges pdf without internet,locally and can also add numbers to pages</p>
                 </div>
             </a>
             <a href="mira.html" class="list-item gradient-item gradient-blue-green">
                 <img src="https://via.placeholder.com/100" alt="Item Image">
                 <div class="text-container">
-                    <h2 class="title">Title 3</h2>
-                    <p class="subtitle">Subtitle 3</p>
+                    <h2 class="title">Mira AI</h2>
+                    <p class="subtitle">A advanced AI art generator</p>
                 </div>
             </a>
         </div>
