--- a/products.html
+++ b/products.html
@@ -14,21 +14,21 @@
     <main>
         <div class="list-view">
             <a href="chat.html" class="list-item gradient-item gradient-black-pink">
-                <img src="https://via.placeholder.com/100" alt="Item Image">
+                <img src="1.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Nova AI</h2>
                     <p class="subtitle">Intelligent AI Chatbot | Powered by Google AI Model</p>
                 </div>
             </a>
             <a href="pdfm.html" class="list-item gradient-item gradient-black-orange">
-                <img src="https://via.placeholder.com/100" alt="Item Image">
+                <img src="2.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">PDF MERGER</h2>
                     <p class="subtitle">A advanced pdf merger app that merges pdf without internet,locally and can also add numbers to pages</p>
                 </div>
             </a>
             <a href="mira.html" class="list-item gradient-item gradient-blue-green">
-                <img src="https://via.placeholder.com/100" alt="Item Image">
+                <img src="3.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Mira AI</h2>
                     <p class="subtitle">A advanced AI art generator</p>
