--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
                 <img src="2.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">PDF MERGER</h2>
-                    <p class="subtitle">A advanced pdf merger app that merges pdf without internet,locally and can also add numbers to pages</p>
+                    <p class="subtitle">A advanced pdf merger app that merges pdf with page index</p>
                 </div>
             </a>
             <a href="mira.html" class="list-item gradient-item gradient-blue-green">
