--- a/pdfm.html
+++ b/pdfm.html
@@ -119,18 +119,15 @@
                     <ul>
                         <li><a href="#features">PDF Merger</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="https://en.wikipedia.org/" target="_blank">About Us</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="products.html">Explore all Products</a></li>
                         
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4 class="gradient-text">Our Other Products</h4>
                     <ul>
-                        <li><a href="#">Image To PDF</a></li>
-                        <li><a href="#">Weather</a></li>
-                        <li><a href="#">Movie Info</a></li>
+                        <li><a href="mira.html">Mira AI</a></li>
+                        <li><a href="chat.html">Nova AI</a></li>
                     </ul>
                 </div>
                 </div>
