--- a/mira.html
+++ b/mira.html
@@ -48,6 +48,18 @@
             </div>
         </div>
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4215436002142343"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-f1+5r+5c-dk+5n"
+     data-ad-client="ca-pub-4215436002142343"
+     data-ad-slot="1930259495"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
         <section class="features">
             <h2>Features</h2>
             <ul>
