--- a/wallpaper.html
+++ b/wallpaper.html
@@ -96,6 +96,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="wallpaper.js"></script>
 </body>
   </html>
