--- a/wallpaper.html
+++ b/wallpaper.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallpaper Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="wallpaper.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
