--- a/products.html
+++ b/products.html
@@ -41,6 +41,13 @@
                     <p class="subtitle">AI Powered Wallpaper App - PANELS</p>
                 </div>
             </a>
+            <a href="dictionary.html" class="list-item gradient-item gradient-black-pink">
+                <img src="1.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Dixtionary</h2>
+                    <p class="subtitle">AI Powered Dictionary - DIXTIONARY</p>
+                </div>
+            </a>
         </div>
     </main>
     <script src="products.js"></script>
