--- a/products.html
+++ b/products.html
@@ -34,14 +34,14 @@
                     <p class="subtitle">A advanced AI art generator</p>
                 </div>
             </a>
-            <a href="wallpaper.html" class="list-item gradient-item gradient-black-pink">
+            <a href="wallpaper.html" class="list-item gradient-item gradient-green-blue">
                 <img src="4.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Panels</h2>
                     <p class="subtitle">AI Powered Wallpaper App - PANELS</p>
                 </div>
             </a>
-            <a href="dictionary.html" class="list-item gradient-item gradient-black-pink">
+            <a href="dictionary.html" class="list-item gradient-item gradient-purple-babypink">
                 <img src="5.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Dixtionary</h2>
