--- a/products.html
+++ b/products.html
@@ -13,6 +13,13 @@
     </header>
     <main>
         <div class="list-view">
+            <a href="imageshrink.html" class="list-item gradient-item gradient-purple-babypink">
+                <img src="6.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Image Shrink</h2>
+                    <p class="subtitle">Best Image Resizer You Can Find On Internet</p>
+                </div>
+            </a>
             <a href="chat.html" class="list-item gradient-item gradient-black-pink">
                 <img src="1.jpg" alt="Item Image">
                 <div class="text-container">
