--- a/webcode.html
+++ b/webcode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Code Editor</title>
+    <title>Code Paper</title>
     <link rel="stylesheet" href="webcode.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Advanced Code Editor</h1>
+            <h1>Code Paper 👨‍💻</h1>
             <div class="actions">
                 <button id="newFileBtn" class="btn" aria-label="New file">
                     <span class="material-icons">note_add</span>
