--- a/monkeytype.html
+++ b/monkeytype.html
@@ -30,7 +30,7 @@
     <!-- Import Our Data -->
     <script src="./data/data.js"></script>  
     <!-- Import Our App Component -->
-    <script src="script.js"></script>
+    <script src="monkeytype.js"></script>
     <!-- Import Our Component -->
     <script src="components/typingTest.js"></script>
     <script src="components/keyboard.js"></script>
