--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
                 <img src="8.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">MonkeyType</h2>
-                    <p class="subtitle">Best Online Typing Speed Tester</p>
+                    <p class="subtitle">Best Online Typing Speed Tester(Only for PC)</p>
                 </div>
             </a>
             <a href="webcode.html" class="list-item gradient-item gradient-purple-babypink">
