--- a/products.html
+++ b/products.html
@@ -13,6 +13,20 @@
     </header>
     <main>
         <div class="list-view">
+            <a href="towergame.html" class="list-item gradient-item gradient-purple-babypink">
+                <img src="10.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Tower Game</h2>
+                    <p class="subtitle">Tower Game by ERA 🤘 Let's set a record</p>
+                </div>
+            </a>
+            <a href="crossyroad.html" class="list-item gradient-item gradient-purple-babypink">
+                <img src="9.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Crossy Road</h2>
+                    <p class="subtitle">Crossy Road Game - Enjoy 🎮</p>
+                </div>
+            </a>
             <a href="monkeytype.html" class="list-item gradient-item gradient-purple-babypink">
                 <img src="8.jpg" alt="Item Image">
                 <div class="text-container">
