--- a/troll.html
+++ b/troll.html
@@ -84,61 +84,61 @@
       "Is that your face, or did your neck throw up?",
       "If ignorance is bliss, you must be ecstatic.",
       "I could agree with you, but then we’d both be wrong.",
-      "You hear your mother calling you from the kitchen, but she died two years ago,"
-"I always thought the shadows in the corner of my room were just tricks of the light until they started whispering my name,"
-"The reflection in the mirror smiled back at me, but I wasn’t smiling,"
-"I woke up to the sound of my own voice singing a lullaby in the dark, but I was home alone,"
-"As I tucked my daughter into bed, she whispered, 'Daddy, there’s someone under my bed.' I bent down to look, and she said, 'Daddy, there’s someone in my bed,'"
-"I glanced at my phone and saw a message from my wife: 'I’m home.' I turned to see her in the doorway, but the message was sent an hour ago,"
-"I love hearing the sounds of my children playing in the basement; too bad I don’t have any kids,"
-"I was alone in my room when I heard a voice softly say, 'Don't worry, I won't let you fall asleep this time,'"
-"The last person who lived in my house was found dead in the attic. I just discovered a hidden staircase leading up there,"
-"Each night, I hear footsteps in the hallway; I’m the only one who lives here,"
-"I received a call from my own number, but when I answered, I heard only my own voice whispering, 'Help me,'"
-"I found a note on my pillow that said, 'I’m watching you sleep.' I live alone,"
-"As I scrolled through old photos, I found one of me sleeping in my bed—taken last night,"
-"I thought I was dreaming when I saw a figure standing at the foot of my bed, but the figure didn’t disappear when I woke up,"
-"The sound of laughter from the children's playground next door stopped abruptly when I stepped outside to look,"
-"I opened my front door to find a letter addressed to me from 'Your Future Self,' warning me not to trust anyone,"
-"My GPS just took me to a dead-end road, but I could hear a child crying in the woods,"
-"I fell asleep during a thunderstorm, but woke up to find the house perfectly still, and the lights off,"
-"Every time I close my eyes, I see the same dark figure hovering over me, waiting,"
-"I heard a voice whispering my name, but when I turned around, I was completely alone,"
-"I took a picture of my friends at the party, but there’s a strange face in the background that none of us recognized,"
-"When I checked the time on my watch, it said 3:33 AM, and the power went out,"
-"I keep hearing my name called in the distance, but it's always followed by an eerie silence,"
-"I woke up to the sound of my own footsteps echoing through the hallway, even though I was in bed,"
-"Each night, I find my bedroom door ajar, even though I always lock it before going to sleep,"
-"I received a text from my neighbor saying, 'Please stop looking at me through your window,' but I was in bed the whole time,"
-"I found a series of photographs of myself sleeping, taken from inside my house,"
-"Late at night, I hear someone humming a lullaby outside my window, but I live in the middle of nowhere,"
-"I discovered an old photo album with pictures of my house long before I moved in, and there are people in every photo who look just like me,"
-"I always thought the scratching noise was just the house settling until I found claw marks in the walls,"
-"When I turned off the lights, I could still see a faint glow coming from the closet,"
-"The air in the room changed, and I felt a chill run down my spine, but I was the only one there,"
-"I woke up to find my bedroom filled with old toys I thought I had thrown away years ago,"
-"My cat stared at the corner of the room, hissing at something I couldn’t see,"
-"I heard someone softly calling my name from the bathroom, but the door was locked,"
-"I was about to take a picture when I noticed the figure standing behind me in the lens reflection,"
-"I keep finding dirty handprints on my windows, but I live on the second floor,"
-"Every morning, I wake up to the sound of children laughing outside, but there are no children in my neighborhood,"
-"I found a strange key hidden in my attic, but I have no idea what it opens,"
-"I started keeping a journal, but when I flipped through the pages, I found entries in handwriting that wasn’t mine,"
-"Late one night, I heard someone breathing heavily outside my bedroom door, but I was alone in the house,"
-"I discovered a box of old letters in the attic, each addressed to me but written in a language I couldn’t understand,"
-"I often hear whispers coming from my closet, and every time I look, there’s nothing there,"
-"I found an old diary that belonged to the previous owner of my house, and the last entry said, 'I’m still here,'"
-"When I woke up, the figure from my dreams was standing at the foot of my bed, staring down at me,"
-"I always thought the creaks in the floorboards were just the house settling, until they started mimicking my footsteps,"
-"I was watching a horror movie when I heard a knock on my front door, but I live in a remote area,"
-"I woke up to find my face smeared with blood, but I don’t remember anything from the night before,"
-"I keep hearing the laughter of a child echoing in my empty house, but I haven’t had any visitors,"
-"I glanced at my security camera footage, and there was someone standing at my front door for hours, staring at the camera,"
-"I noticed a figure watching me from the woods every time I went out for a walk,"
-"The lights flickered, and for a brief moment, I saw the silhouette of a person standing behind me,"
-"When I turned on my computer, it was already logged in, with a document open that I never wrote,"
-"I woke up in a cold sweat after dreaming of a place I’ve never been, only to find a photo of it on my wall the next morning,"
-"I found a message carved into my bathroom mirror that read, 'I’ll be with you soon,' appearing every time I take a shower."
+      "You hear your mother calling you from the kitchen, but she died two years ago,",
+"I always thought the shadows in the corner of my room were just tricks of the light until they started whispering my name,",
+"The reflection in the mirror smiled back at me, but I wasn’t smiling,",
+"I woke up to the sound of my own voice singing a lullaby in the dark, but I was home alone,",
+"As I tucked my daughter into bed, she whispered, 'Daddy, there’s someone under my bed.' I bent down to look, and she said, 'Daddy, there’s someone in my bed,'",
+"I glanced at my phone and saw a message from my wife: 'I’m home.' I turned to see her in the doorway, but the message was sent an hour ago,",
+"I love hearing the sounds of my children playing in the basement; too bad I don’t have any kids,",
+"I was alone in my room when I heard a voice softly say, 'Don't worry, I won't let you fall asleep this time,'",
+"The last person who lived in my house was found dead in the attic. I just discovered a hidden staircase leading up there,",
+"Each night, I hear footsteps in the hallway; I’m the only one who lives here,",
+"I received a call from my own number, but when I answered, I heard only my own voice whispering, 'Help me,'",
+"I found a note on my pillow that said, 'I’m watching you sleep.' I live alone,",
+"As I scrolled through old photos, I found one of me sleeping in my bed—taken last night,",
+"I thought I was dreaming when I saw a figure standing at the foot of my bed, but the figure didn’t disappear when I woke up,",
+"The sound of laughter from the children's playground next door stopped abruptly when I stepped outside to look,",
+"I opened my front door to find a letter addressed to me from 'Your Future Self,' warning me not to trust anyone,",
+"My GPS just took me to a dead-end road, but I could hear a child crying in the woods,",
+"I fell asleep during a thunderstorm, but woke up to find the house perfectly still, and the lights off,",
+"Every time I close my eyes, I see the same dark figure hovering over me, waiting,",
+"I heard a voice whispering my name, but when I turned around, I was completely alone,",
+"I took a picture of my friends at the party, but there’s a strange face in the background that none of us recognized,",
+"When I checked the time on my watch, it said 3:33 AM, and the power went out,",
+"I keep hearing my name called in the distance, but it's always followed by an eerie silence,",
+"I woke up to the sound of my own footsteps echoing through the hallway, even though I was in bed,",
+"Each night, I find my bedroom door ajar, even though I always lock it before going to sleep,",
+"I received a text from my neighbor saying, 'Please stop looking at me through your window,' but I was in bed the whole time,",
+"I found a series of photographs of myself sleeping, taken from inside my house,",
+"Late at night, I hear someone humming a lullaby outside my window, but I live in the middle of nowhere,",
+"I discovered an old photo album with pictures of my house long before I moved in, and there are people in every photo who look just like me,",
+"I always thought the scratching noise was just the house settling until I found claw marks in the walls,",
+"When I turned off the lights, I could still see a faint glow coming from the closet,",
+"The air in the room changed, and I felt a chill run down my spine, but I was the only one there,",
+"I woke up to find my bedroom filled with old toys I thought I had thrown away years ago,",
+"My cat stared at the corner of the room, hissing at something I couldn’t see,",
+"I heard someone softly calling my name from the bathroom, but the door was locked,",
+"I was about to take a picture when I noticed the figure standing behind me in the lens reflection,",
+"I keep finding dirty handprints on my windows, but I live on the second floor,",
+"Every morning, I wake up to the sound of children laughing outside, but there are no children in my neighborhood,",
+"I found a strange key hidden in my attic, but I have no idea what it opens,",
+"I started keeping a journal, but when I flipped through the pages, I found entries in handwriting that wasn’t mine,",
+"Late one night, I heard someone breathing heavily outside my bedroom door, but I was alone in the house,",
+"I discovered a box of old letters in the attic, each addressed to me but written in a language I couldn’t understand,",
+"I often hear whispers coming from my closet, and every time I look, there’s nothing there,",
+"I found an old diary that belonged to the previous owner of my house, and the last entry said, 'I’m still here,'",
+"When I woke up, the figure from my dreams was standing at the foot of my bed, staring down at me,",
+"I always thought the creaks in the floorboards were just the house settling, until they started mimicking my footsteps,",
+"I was watching a horror movie when I heard a knock on my front door, but I live in a remote area,",
+"I woke up to find my face smeared with blood, but I don’t remember anything from the night before,",
+"I keep hearing the laughter of a child echoing in my empty house, but I haven’t had any visitors,",
+"I glanced at my security camera footage, and there was someone standing at my front door for hours, staring at the camera,",
+"I noticed a figure watching me from the woods every time I went out for a walk,",
+"The lights flickered, and for a brief moment, I saw the silhouette of a person standing behind me,",
+"When I turned on my computer, it was already logged in, with a document open that I never wrote,",
+"I woke up in a cold sweat after dreaming of a place I’ve never been, only to find a photo of it on my wall the next morning,",
+"I found a message carved into my bathroom mirror that read, 'I’ll be with you soon,' appearing every time I take a shower.",
 
     
     ];
