--- a/products.html
+++ b/products.html
@@ -14,70 +14,70 @@
     <main>
         <div class="list-view">
             
-            <a href="towergame.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="towergame.html" class="list-item gradient-item gradient-sunset">
                 <img src="10.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Tower Game</h2>
                     <p class="subtitle">Tower Game by ERA 🤘 Let's set a record</p>
                 </div>
             </a>
-            <a href="crossyroad.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="crossyroad.html" class="list-item gradient-item gradient-ocean">
                 <img src="9.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Crossy Road</h2>
                     <p class="subtitle">Crossy Road Game - Enjoy 🎮</p>
                 </div>
             </a>
-            <a href="monkeytype.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="monkeytype.html" class="list-item gradient-item gradient-royal-sky">
                 <img src="8.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">MonkeyType</h2>
                     <p class="subtitle">Best Online Typing Speed Tester(Only for PC)</p>
                 </div>
             </a>
-            <a href="webcode.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="webcode.html" class="list-item gradient-item gradient-coral-peach">
                 <img src="7.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">CodePaper</h2>
                     <p class="subtitle">#1 Best Online Advanced Web Compiler</p>
                 </div>
             </a>
-            <a href="imageshrink.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="imageshrink.html" class="list-item gradient-item gradient-lavender-pink">
                 <img src="6.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Image Shrink</h2>
                     <p class="subtitle">Best Image Resizer You Can Find On Internet</p>
                 </div>
             </a>
-            <a href="chat.html" class="list-item gradient-item gradient-black-pink">
+            <a href="chat.html" class="list-item gradient-item gradient-emarald-lime">
                 <img src="1.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Nova AI</h2>
                     <p class="subtitle">Intelligent AI Chatbot | Powered by Google AI Model</p>
                 </div>
             </a>
-            <a href="pdfm.html" class="list-item gradient-item gradient-black-orange">
+            <a href="pdfm.html" class="list-item gradient-item gradient-crimson-gold">
                 <img src="2.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">PDF MERGER</h2>
                     <p class="subtitle">A advanced pdf merger app that merges pdf with page index</p>
                 </div>
             </a>
-            <a href="mira.html" class="list-item gradient-item gradient-blue-green">
+            <a href="mira.html" class="list-item gradient-item gradient-berry-pink">
                 <img src="3.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Mira AI</h2>
                     <p class="subtitle">A advanced AI art generator</p>
                 </div>
             </a>
-            <a href="wallpaper.html" class="list-item gradient-item gradient-green-blue">
+            <a href="wallpaper.html" class="list-item gradient-item gradient-teal-blue">
                 <img src="4.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Panels</h2>
                     <p class="subtitle">AI Powered Wallpaper App - PANELS</p>
                 </div>
             </a>
-            <a href="dictionary.html" class="list-item gradient-item gradient-purple-babypink">
+            <a href="dictionary.html" class="list-item gradient-item gradient-slate-grey">
                 <img src="5.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Dixtionary</h2>
