--- a/products.html
+++ b/products.html
@@ -77,7 +77,7 @@
                     <p class="subtitle">AI Powered Wallpaper App - PANELS</p>
                 </div>
             </a>
-            <a href="dictionary.html" class="list-item gradient-item gradient-slate-grey">
+            <a href="dictionary.html" class="list-item gradient-item gradient-slate-gray">
                 <img src="5.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Dixtionary</h2>
