--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
                     <p class="subtitle">Best Image Resizer You Can Find On Internet</p>
                 </div>
             </a>
-            <a href="chat.html" class="list-item gradient-item gradient-emarald-lime">
+            <a href="chat.html" class="list-item gradient-item gradient-emerald-lime">
                 <img src="1.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Nova AI</h2>
