--- a/products.html
+++ b/products.html
@@ -84,6 +84,13 @@
                     <p class="subtitle">AI Powered Dictionary - DIXTIONARY</p>
                 </div>
             </a>
+            <a href="policy.html" class="list-item gradient-item gradient-slate-gray">
+                <img src="privacy.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">Privacy Policy</h2>
+                    <p class="subtitle">Privacy Policy - ERA SEARCH 🔎</p>
+                </div>
+            </a>
         </div>
     </main>
     <script src="products.js"></script>
