--- a/products.html
+++ b/products.html
@@ -84,7 +84,14 @@
                     <p class="subtitle">AI Powered Dictionary - DIXTIONARY</p>
                 </div>
             </a>
-            <a href="policy.html" class="list-item gradient-item gradient-slate-gray">
+            <a href="thumbnail.html" class="list-item gradient-item gradient-magenta-violet">
+                <img src="11.jpg" alt="Item Image">
+                <div class="text-container">
+                    <h2 class="title">YT Thumbnail Downloader</h2>
+                    <p class="subtitle">Easily Download YouTube thumbnails ☺️</p>
+                </div>
+            </a>
+            <a href="policy.html" class="list-item gradient-item gradient-cherry-lemon">
                 <img src="privacy.jpg" alt="Item Image">
                 <div class="text-container">
                     <h2 class="title">Privacy Policy</h2>
