--- a/cheat.html
+++ b/cheat.html
@@ -182,7 +182,7 @@
     </video>
 </div>
 
-<img src="era.png" alt="App Image" class="app-image" onclick="openPlayStore()" /> <!-- Change this to your image URL -->
+<img src="era.webp" alt="App Image" class="app-image" onclick="openPlayStore()" /> <!-- Change this to your image URL -->
 
 <div class="faq-container" id="faqContainer">
     <div class="app-bar">Cheat Codes</div> <!-- Simple Heading -->
